--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,49 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  box-sizing: border-box; /* 盒模型 */
+  padding: 0; /* 重置内边距 */
+  margin: 0; /* 重置外边距 */
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  max-width: 100vw; /* 限制最大宽度 */
+  overflow-x: hidden; /* 隐藏水平方向的滚动条 */
+  background-color: #f6f6f4; /* 背景色 */
+  color: #17203e; /* 文字颜色 */
+  user-select: none; /* 禁止选中文字 */
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  text-decoration: none; /* 去掉下划线 */
+  color: inherit; /* 继承父元素的文字颜色 */
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.theme {
+  transition: 1s all ease;
+}
+
+.dark {
+  background-color: #111; /* 背景色 */
+  color: #717170; /* 文字颜色 */
+}
+
+.light {
+  background-color: #f6f6f4; /* 背景色 */
+  color: #17203e; /* 文字颜色 */
+}
+
+.container {
+  max-width: 1980px; /* 限制最大宽度 */
+  min-height: 100vh; /* 100vh是浏览器的高度 */
+  margin: 0 auto; /* 居中 */
+  padding: 0 70px; /* 左右留出60px的边距 */
+  display: flex; /* flex布局 */
+  flex-direction: column; /* 垂直布局 */
+  justify-content: space-between; /* 两端对齐 */
+}
+
+.desc {
+  font-size: 18px;
+  font-weight: 270;
+  text-align: justify;
 }
