--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,46 +1,30 @@
 .container {
-  margin-top: 5px;
 }
 
 .top {
   display: flex;
-  flex-direction: row;
-  align-items: between;
-  justify-content: between;
-  height: 120px;
-  margin-top: 5px;
-  position: relative;
 }
+
 .info {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  align-items: between;
-  justify-content: between;
-  height: 150%;
+  justify-content: space-between;
 }
 
 .title {
-  font-size: 36px;
+  font-size: 40px;
 }
 
 .desc {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 300;
-  color: #999;
-  text-align: justify;
 }
 
 .author {
-  height: 100px;
-}
-
-.username {
-  font-size: 20px;
-  font-weight: 300;
-  color: #999;
-  text-align: justify;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .avatar {
@@ -50,7 +34,7 @@
 
 .imageContainer {
   flex: 1;
-  height: 300%;
+  height: 300px;
   position: relative;
 }
 
